# substring-search

./: .gitignore  Cargo.toml  README.md
analysis/: plots.py
benches/: substring_benchmark.rs
data/Tolstoy/: anna_karenina_tolstoy.txt  war_and_peace_tolstoy.txt
data/genomes/: bacterial_genome_1.txt  bacterial_genome_2.txt
src/: hashers.rs  helpers.rs  implementations.rs  lib.rs  main.rs
