[package]
name = "substring_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.6"
itertools = "0.10.3"
proptest = "1.0.0"
substring = "1.4.5"


[[bench]]
name = "substring_benchmark"
harness = false
