[package]
name = "substring_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler32 = "1.2.0"
hashbrown = { version = "0.12.3", features = ["raw"] }
itertools = "0.10.3"
rand = "0.8.5"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3.6"
proptest = "1.0.0"
substring = "1.4.5"


[[bench]]
name = "substring_benchmark"
harness = false
